# seca

./: .gitattributes  .gitignore  .gitmodules  BASELINE_RESULTS.md  NEXT_STEPS.md  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
data/: apps_test.jsonl  apps_test_introductory.jsonl  apps_train.jsonl  apps_train_introductory.jsonl
data_filtered/: apps_test.jsonl  apps_train.jsonl
leetcode/: leetcode_test.jsonl  leetcode_test_apps_fmt.jsonl  leetcode_test_apps_harness_fmt.jsonl  leetcode_train.jsonl  leetcode_train_apps_fmt.jsonl  leetcode_train_apps_harness_fmt.jsonl
scripts/: augment_leetcode_apps_with_harness.py  diagnose.py  download_data.py  download_raw.py  eval.py  eval_sdft_distil.py  eval_sdpo_distil.py  filter_data.py  inspect_data.py  inspect_first_rows.py  modal_distil_sdft.py  modal_run.py  modal_sdpo.py  modal_sdpo_distil.py  plot_results.py  run.py  run_diagnostics.py  run_sdpo_diagnostics.py  sweep_ablation.py  sweep_all.sh  train_sdft_distil.py  train_sdpo_distil.py
seca/: __init__.py
seca/data/: __init__.py  apps.py  episode.py  kernelbench.py  knowledge.py  livecodebench.py  loader.py  problem.py  skills.py
seca/eval/: metrics.py
seca/memory/: store.py
seca/models/: base.py  omni.py  router.py  sdft.py  sdpo.py  vllm_weight_sync.py
seca/sandbox/: executor.py
seca/train/: baselines.py  continual.py  trainer.py
seca/utils/: __init__.py  tokenizer.py
