[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "seca"
version = "0.1.0"
description = "Selective Externalization for Continual Adaptation"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "transformers>=4.40",
    "datasets>=2.18",
    "sentence-transformers>=2.7",
    "faiss-cpu>=1.8",
    "numpy>=1.26",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
include = ["seca*"]
