[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "seca"
version = "0.2.0"
description = "Omni-Teacher: Execution-Grounded Self-Distillation for Code Generation (SDFT + SDPO)"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "transformers>=4.40",
    "datasets>=2.18",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
]

[tool.setuptools.packages.find]
include = ["seca*"]
